# nats-jsonrpc

./: .gitmodules  CMakeLists.txt
demo/: client.c  server.c
src/: main.c
